--- a/Reservation.API/appsettings.Development.json
+++ b/Reservation.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQLConnection": "Server= . ;Database=HotelReservation;Trusted_Connection=True;TrustServerCertificate=True;"
+    "SQLConnection": "..."
   },
   "Logging": {
     "LogLevel": {
@@ -9,3 +9,4 @@
     }
   }
 }
+
