Add JWT settings to appsettings.json
Added JWT configuration for authentication.

--- a/Reservation.API/appsettings.json
+++ b/Reservation.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Jwt": {
+  "Key": "...",
+  "Issuer": "....",
+  "Audience": ".....",
+  "DurationInHours": .
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +13,4 @@
   },
   "AllowedHosts": "*"
 }
+
