Fix formatting in appsettings.json

--- a/Reservation.API/appsettings.json
+++ b/Reservation.API/appsettings.json
@@ -3,7 +3,7 @@
   "Key": "...",
   "Issuer": "....",
   "Audience": ".....",
-  "DurationInHours": .
+  "DurationInHours": 
 },
   "Logging": {
     "LogLevel": {
@@ -13,4 +13,5 @@
   },
   "AllowedHosts": "*"
 }
+
 
