--- a/Reservation.API/appsettings.json
+++ b/Reservation.API/appsettings.json
@@ -1,10 +1,17 @@
 {
   "Jwt": {
-  "Key": "...",
-  "Issuer": "....",
-  "Audience": ".....",
-  "DurationInHours": 
-},
+    "Key": "...",
+    "Issuer": "..",
+    "Audience": ".",
+    "DurationInHours": 
+  },
+  "Smtp": {
+    "Host": "....",
+    "Port": 587,
+    "Username": "...",
+    "Password": "..",
+    "From": "."
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -13,5 +20,3 @@
   },
   "AllowedHosts": "*"
 }
-
-
