--- a/Reservation.API/appsettings.json
+++ b/Reservation.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "Smtp": {
     "Host": "....",
-    "Port": 587,
+    "Port": ,
     "Username": "...",
     "Password": "..",
     "From": "."
@@ -20,3 +20,4 @@
   },
   "AllowedHosts": "*"
 }
+
