--- a/Reservation.API/appsettings.json
+++ b/Reservation.API/appsettings.json
@@ -12,6 +12,11 @@
     "Password": "..",
     "From": "."
   },
+  "Paymob": {
+    "ApiKey": "...",
+    "IframeId": "....",
+    "IntegrationId": "..."
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -20,7 +25,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SQLConnection": "server=MOHAMED_RASLAN\\SQLEXPRESS;database=HotelResevDb;trusted_Connection=true;trustservercertificate=true;"
+    "SQLConnection": ".."
   }
 }
+
 
